--- a/settings.json.sample
+++ b/settings.json.sample
@@ -7,6 +7,7 @@
     "appid": "SELFAPIKEY"
   }
   "wolframalpha": {
-    "appid": "SELFAPIKEY"
+    "appid": "SELFAPIKEY",
+    "static_url": "http://some.site/{file}"
   }
 }
