--- a/settings.json.sample
+++ b/settings.json.sample
@@ -1,7 +1,8 @@
 {
   "discord": {
     "login": "some@e.mail",
-    "password": "password"
+    "password": "password",
+    "admins": []
   },
   "exchangerates": {
     "appid": "SELFAPIKEY"
